[package]
name = "smart_analytica_assignment"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.58", features = ["derive"] }
futures = "0.3.32"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["codec", "net"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
